--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,7 @@ body{
     .column.full { width: 100%; }
     .column.two-thirds { width: 66.7%}
     .column.half { width: 50%; }
-    .column.third ( width: 33.3%; )
+    .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
     .column.flow-opposite { float: right; }
 }
@@ -51,4 +51,14 @@ body{
 /* large screens (1024px) */
 @media (min-width: 1024px) {
     html { font-size: 120%; }
+}
+
+.clearfix::before,
+.clearfix::after {
+    content: " ";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
 }
