--- a/styles/landing.css
+++ b/styles/landing.css
@@ -39,12 +39,25 @@ body.landing{
      -webkit-transform: scaleX(0.9) translateY(3rem);
      -moz-transform: scaleX(0.9) translateY(3rem);
      transform: scaleX(0.9) translateY(3rem);
-     -webkit-transition: all 0.25s ease-in-out;
-     -moz-transition: all 0.25s ease-in-out;
-     transition: all 0.25s ease-in-out;
+     -webkit-transition: all 1.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     -moz-transition: all 1.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     transition: all 1.35s cubic-bezier(.57, -0.37, .61, -0.39);
      -webkit-transition-delay: 0.2s;
      -moz-transition-delay: 0.2s;
      transition-delay: 0.2s;
+}
+.pointTwo {
+     -webkit-transform: scaleX(-0.9) translateY-(3rem);
+     -moz-transform: scaleX(-0.9) translateY(-3rem);
+     transform: scaleX(-0.9) translateY(-3rem);
+     -webkit-transition: all 2.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     -moz-transition: all 2.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     transition: all 2.35s cubic-bezier(.57, -0.37, .61, -0.39);}
+
+.pointThree {
+     -webkit-transition: all 3.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     -moz-transition: all 3.35s cubic-bezier(.57, -0.37, .61, -0.39);
+     transition: all 3.35s cubic-bezier(.57, -0.37, .61, -0.39);}
 }
 
 .point .point-title {
